fixes bootstrap mobile shift and integrates shrinking

--- a/app/assets/stylesheets/global.sass
+++ b/app/assets/stylesheets/global.sass
@@ -6,7 +6,7 @@ body
   color: $xaxis-darkest-blue
   font-size: 14px
   line-height: 22px
-  transition: padding-top, .5s, linear
+  // transition: padding-top, .5s, linear
 a:link, a:active, a:hover
   text-decoration: none
 
